# dvc_course

./: Makefile  README.md  pyproject.toml  requirements.txt
course/: __init__.py  dataset.py  features.py  plots.py
course/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: getting_the_data.ipynb
